--- a/.travis.yml
+++ b/.travis.yml
@@ -12,15 +12,17 @@ cache:
 before_script:
     # python must be python2, so make sure in this hacky way
     - python2 --version
-    - dpkg --get-selections
-    - apt install python2
-    - export PYTHON_ORIG=`which python`
-    - mv $PYTHON_ORIG ${PYTHON_ORIG}.orig
-    - ln -sf `which python2` $PYTHON_ORIG
+    - export PYTHON_ORIG=$(which python)
+    - export PYTHON2=$(which python2)
+    - export PYTHON_ORIG_BACKUP=${PYTHON_ORIG}.orig
+    - mv $PYTHON_ORIG $PYTHON_ORIG_BACKUP
+    - ln -sf $PYTHON2 $PYTHON_ORIG
     - QEMU_ARCHES="arm" bash -e ci/travis-qemu.sh
     - export PATH=$PATH:$HOME/qemu/bin
     - mkdir -p $HOME/images
     - wget "http://lede-project.tetaneutral.net/releases/17.01.0/targets/armvirt/generic/lede-17.01.0-r3205-59508e3-armvirt-zImage-initramfs" -o $HOME/images/lede.kernel
+    - rm $PYTHON_ORIG
+    - mv $PYTHON_ORIG_BACKUP $PYTHON_ORIG
 
 script:
   - python3 --version
