travis: more wip

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
+dist: trusty
 language: python
 python:
   - "3.6"
 
-sudo: false
+sudo: required
 
 cache:
     directories:
@@ -17,6 +18,7 @@ before_script:
     - export PYTHON_ORIG_BACKUP=${PYTHON_ORIG}.orig
     - mv $PYTHON_ORIG $PYTHON_ORIG_BACKUP
     - ln -sf $PYTHON2 $PYTHON_ORIG
+    - python --version
     - QEMU_ARCHES="arm" bash -e ci/travis-qemu.sh
     - export PATH=$PATH:$HOME/qemu/bin
     - mkdir -p $HOME/images
