--- a/.travis.yml
+++ b/.travis.yml
@@ -20,14 +20,4 @@ before_script:
     - wget "http://lede-project.tetaneutral.net/releases/17.01.0/targets/armvirt/generic/lede-17.01.0-r3205-59508e3-armvirt-zImage-initramfs" -o $HOME/images/lede.kernel
 
 script:
-  - ssh-keygen -f $HOME/.ssh/id_rsa -t rsa -P ''
-  - cp $HOME/.ssh/id_rsa $HOME/.ssh/authorized_keys
-  - chmod 700 $HOME/.ssh
-  - chmod 600 $HOME/.ssh/authorized_keys
-  - echo 'Host *' > $HOME/.ssh/config
-  - echo 'StrictHostKeyChecking off' >> $HOME/.ssh/config
-  - chmod 600 $HOME/.ssh/config
-  - python3 --version
-  - ln -sf $HOME/images/lede.kernel .
-  - ./test.py --ssh-user $USER
-  - ./test_lede.sh $USER
+  - echo just-for-cache
