--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ before_script:
     - wget "http://lede-project.tetaneutral.net/releases/17.01.0/targets/armvirt/generic/lede-17.01.0-r3205-59508e3-armvirt-zImage-initramfs" -o $HOME/images/lede.kernel
 
 script:
+  - ls -l $HOME/images/
   - export PATH=$PATH:$HOME/qemu/bin
   - sudo ln -sf $HOME/qemu/bin/qemu-system-arm /usr/bin
   - qemu-system-arm --version
@@ -30,12 +31,13 @@ script:
   - chmod 700 $HOME/.ssh
   - chmod 600 $HOME/.ssh/authorized_keys
   - echo 'Host *' > $HOME/.ssh/config
-  - echo 'StrictHostKeyChecking off' >> $HOME/.ssh/config
+  - echo 'StrictHostKeyChecking no' >> $HOME/.ssh/config
   - chmod 600 $HOME/.ssh/config
   - ssh -o StrictHostKeyChecking=no $USER@localhost echo ok
   - ssh $USER@localhost echo ok
   - ssh -q -o StrictHostKeyChecking=no $USER@localhost echo ok
   - python3 --version
   - ln -sf $HOME/images/lede.kernel .
+  - ls -l lede.kernel
   - ./test.py --ssh-user $USER
   - ./test_lede.sh $USER
