--- a/.travis.yml
+++ b/.travis.yml
@@ -18,14 +18,18 @@ before_script:
     - export PATH=$PATH:$HOME/qemu/bin
     - mkdir -p $HOME/images
     - wget "http://lede-project.tetaneutral.net/releases/17.01.0/targets/armvirt/generic/lede-17.01.0-r3205-59508e3-armvirt-zImage-initramfs" -O $HOME/images/lede.kernel
+    - sudo apt-get install lua
 
 script:
-  - ls -l $HOME/images/
-  - export PATH=$PATH:$HOME/qemu/bin
-  - sudo ln -sf $HOME/qemu/bin/qemu-system-arm /usr/bin
-  - qemu-system-arm --version
-  - sudo apt-get install strace -y
+  - lua --version
   - ssh -V
+  - qemu-system-arm --version
+  - python3 --version
+  - export PATH=$PATH:$HOME/qemu/bin
+  - echo "$PATH"
+  - ls -l $HOME/images/
+  - sudo ln -sf $HOME/qemu/bin/qemu-system-arm /usr/bin
+  - sudo apt-get install strace -y
   - ssh-keygen -f $HOME/.ssh/id_rsa -t rsa -P ''
   - cp $HOME/.ssh/id_rsa.pub $HOME/.ssh/authorized_keys
   - chmod 700 $HOME/.ssh
@@ -33,10 +37,7 @@ script:
   - echo 'Host *' > $HOME/.ssh/config
   - echo 'StrictHostKeyChecking no' >> $HOME/.ssh/config
   - chmod 600 $HOME/.ssh/config
-  - ssh -o StrictHostKeyChecking=no $USER@localhost echo ok
-  - ssh $USER@localhost echo ok
-  - ssh -q -o StrictHostKeyChecking=no $USER@localhost echo ok
-  - python3 --version
+  - ssh -o StrictHostKeyChecking=no "$USER@localhost" echo "ssh works ok"
   - ln -sf $HOME/images/lede.kernel .
   - ls -l lede.kernel
   - ./test.py --ssh-user $USER
