travis: wip; lua 5.1 install, no lua package

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_script:
     - export PATH=$PATH:$HOME/qemu/bin
     - mkdir -p $HOME/images
     - wget "http://lede-project.tetaneutral.net/releases/17.01.0/targets/armvirt/generic/lede-17.01.0-r3205-59508e3-armvirt-zImage-initramfs" -O $HOME/images/lede.kernel
-    - sudo apt-get install lua
+    - sudo apt-get install lua5.1
 
 script:
   - lua --version
