--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,8 @@ before_script:
     - mkdir -p $HOME/images
     - wget "http://lede-project.tetaneutral.net/releases/17.01.0/targets/armvirt/generic/lede-17.01.0-r3205-59508e3-armvirt-zImage-initramfs" -O $HOME/images/lede.kernel
     - sudo apt-get install lua5.1
+    - sudo apt-cache search lua
+    - sudo apt-get install luasocket luaposix
 
 script:
   - lua --version
