--- a/.travis.yml
+++ b/.travis.yml
@@ -41,4 +41,6 @@ script:
   - ln -sf $HOME/images/lede.kernel .
   - ls -l lede.kernel
   - ./test.py --ssh-user $USER
+  # masquerade
+  - ./travis/masquerade.sh
   - ./test_lede.sh $USER
