--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,11 @@
+addons:
+    artifacts: true
+
+notifications:
+    email:
+        on_failure: change
+        on_success: change
+
 dist: trusty
 language: python
 python:
