--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ before_script:
   - QEMU_ARCHES="arm" bash -e ci/travis-qemu.sh
   - export PATH=$PATH:$HOME/qemu/bin
   - mkdir -p $HOME/images
-  - [ ! -e $HOME/images/lede.kernel ] && wget "http://lede-project.tetaneutral.net/releases/17.01.0/targets/armvirt/generic/lede-17.01.0-r3205-59508e3-armvirt-zImage-initramfs" -O $HOME/images/lede.kernel
+  - wget -c "http://lede-project.tetaneutral.net/releases/17.01.0/targets/armvirt/generic/lede-17.01.0-r3205-59508e3-armvirt-zImage-initramfs" -O $HOME/images/lede.kernel
   - sudo apt-get install lua5.1 lua-socket lua-posix -y
   - lua -v
   - ssh -V
